update: バックエンドに合わせてファイルアップロードのスキーマを変更
